@@ -23,7 +23,6 @@ import org.springframework.stereotype.Service;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 
-import static fr.dossierfacile.common.enums.ApplicationType.COUPLE;
 import static fr.dossierfacile.common.enums.ApplicationType.GROUP;
 
 @Service
@@ -32,6 +31,8 @@ import static fr.dossierfacile.common.enums.ApplicationType.GROUP;
 public class MailServiceImpl implements MailService {
     private static final String TENANT_BASE_URL_KEY = "tenantBaseUrl";
     private static final String TENANT_ID_KEY = "TENANT_ID";
+    private static final String PRENOM_KEY = "PRENOM";
+    private static final String CONFIRM_TOKEN_KEY = "confirmToken";
     private final TransactionalEmailsApi apiInstance;
     @Value("${tenant.base.url}")
     private String tenantBaseUrl;
@@ -69,8 +70,7 @@ public class MailServiceImpl implements MailService {
     private Long templateIdTokenExpiration;
     @Value("${brevo.template.id.share.file}")
     private Long templateIdShareFile;
-    @Value("${brevo.template.id.partner.access.revoked}")
-    private Long templateIDPartnerAccessRevoked;
+
     @Value("${link.after.completed.default}")
     private String defaultCompletedUrl;
     @Value("${link.after.created.default}")
@@ -116,7 +116,7 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailConfirmAccount(UserDto user, ConfirmationToken confirmationToken) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("confirmToken", confirmationToken.getToken());
+        variables.put(CONFIRM_TOKEN_KEY, confirmationToken.getToken());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
 
         sendEmailToTenant(user, variables, templateIDWelcome);
@@ -126,7 +126,7 @@ public class MailServiceImpl implements MailService {
     public void sendEmailNewPassword(User user, PasswordRecoveryToken passwordRecoveryToken) {
         Map<String, String> variables = new HashMap<>();
         variables.put("newPasswordToken", passwordRecoveryToken.getToken());
-        variables.put("PRENOM", user.getFirstName());
+        variables.put(PRENOM_KEY, user.getFirstName());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
 
         sendEmailToTenant(user, variables, templateIdNewPassword);
@@ -137,9 +137,9 @@ public class MailServiceImpl implements MailService {
         Map<String, String> variables = new HashMap<>();
 
         Long templateId = templateIdCoupleApplication;
-        variables.put("PRENOM", flatmate.getFirstName());
+        variables.put(PRENOM_KEY, flatmate.getFirstName());
         variables.put(TENANT_ID_KEY, flatmate.getId().toString());
-        variables.put("confirmToken", passwordRecoveryToken.getToken());
+        variables.put(CONFIRM_TOKEN_KEY, passwordRecoveryToken.getToken());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
         if (applicationType == GROUP) {
             variables.put("NOM", Strings.isNullOrEmpty(flatmate.getPreferredName()) ? flatmate.getLastName() : flatmate.getPreferredName());
@@ -153,7 +153,7 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailAccountDeleted(UserDto user) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", user.getFirstName());
+        variables.put(PRENOM_KEY, user.getFirstName());
         variables.put("NOM", Strings.isNullOrEmpty(user.getPreferredName()) ? user.getLastName() : user.getPreferredName());
 
         sendEmailToTenant(user, variables, templateIdAccountDeleted);
@@ -163,11 +163,11 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailAccountCompleted(TenantDto tenant) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", tenant.getFirstName());
+        variables.put(PRENOM_KEY, tenant.getFirstName());
         variables.put("NOM", Strings.isNullOrEmpty(tenant.getPreferredName()) ? tenant.getLastName() : tenant.getPreferredName());
 
         if (tenant.isBelongToPartner()) {
-            UserApiDto userApi = tenant.getUserApis().get(0);
+            UserApiDto userApi = tenant.getUserApis().getFirst();
             variables.put("partnerName", userApi.getName2());
             variables.put("logoUrl", userApi.getLogoUrl());
             variables.put("callToActionUrl", OptionalString.of(userApi.getCompletedUrl()).orElse(defaultCompletedUrl));
@@ -182,9 +182,9 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailWhenEmailAccountNotYetValidated(User user, ConfirmationToken confirmationToken) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", user.getFirstName());
+        variables.put(PRENOM_KEY, user.getFirstName());
         variables.put("NOM", Strings.isNullOrEmpty(user.getPreferredName()) ? user.getLastName() : user.getPreferredName());
-        variables.put("confirmToken", confirmationToken.getToken());
+        variables.put(CONFIRM_TOKEN_KEY, confirmationToken.getToken());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
 
         sendEmailToTenant(user, variables, templateEmailWhenEmailAccountNotYetValidated);
@@ -193,7 +193,7 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailWhenAccountNotYetCompleted(User user) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", user.getFirstName());
+        variables.put(PRENOM_KEY, user.getFirstName());
         variables.put("NOM", Strings.isNullOrEmpty(user.getPreferredName()) ? user.getLastName() : user.getPreferredName());
         variables.put(TENANT_ID_KEY, user.getId().toString());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
@@ -204,7 +204,7 @@ public class MailServiceImpl implements MailService {
     @Override
     public void sendEmailWhenAccountIsStillDeclined(User user) {
         Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", user.getFirstName());
+        variables.put(PRENOM_KEY, user.getFirstName());
         variables.put("NOM", Strings.isNullOrEmpty(user.getPreferredName()) ? user.getLastName() : user.getPreferredName());
         variables.put(TENANT_BASE_URL_KEY, tenantBaseUrl);
 
@@ -266,12 +266,13 @@ public class MailServiceImpl implements MailService {
     }
 
     @Override
-    public void sendFileByMail(String url, String email, String tenantName, String fullName, String tenantEmail) {
+    public void sendFileByMail(String url, String email, String message, String tenantName, String fullName, String tenantEmail) {
         Map<String, String> variables = new HashMap<>();
         variables.put("url", tenantBaseUrl + url);
         variables.put("tenantName", tenantName);
         variables.put("tenantEmail", tenantEmail);
         variables.put("fullName", fullName);
+        variables.put("customMessage", message);
 
         SendSmtpEmailTo sendSmtpEmailTo = new SendSmtpEmailTo();
         sendSmtpEmailTo.setEmail(email);
@@ -298,16 +299,6 @@ public class MailServiceImpl implements MailService {
     }
 
     @Override
-    public void sendEmailPartnerAccessRevoked(Tenant receiver, UserApi userApi, Tenant revocationRequester) {
-        Map<String, String> variables = new HashMap<>();
-        variables.put("PRENOM", receiver.getFirstName());
-        variables.put("partnerName", userApi.getName2());
-        variables.put("requestOrigin", new RevocationRequest(revocationRequester, receiver).getOrigin());
-
-        sendEmailToTenant(receiver, variables, templateIDPartnerAccessRevoked);
-    }
-
-    @Override
     public void sendDefaultEmailExpiredToken(String email, OperationAccessToken token) {
         SendSmtpEmailTo sendSmtpEmailTo = new SendSmtpEmailTo();
         sendSmtpEmailTo.setEmail(email);
@@ -328,17 +319,6 @@ public class MailServiceImpl implements MailService {
         }
     }
 
-    private record RevocationRequest(Tenant requester, Tenant emailReceiver) {
 
-        String getOrigin() {
-            if (requester.getId().equals(emailReceiver.getId())) {
-                return "votre demande";
-            }
-            ApplicationType applicationType = requester.getApartmentSharing().getApplicationType();
-            String requesterType = applicationType == COUPLE ? "conjoint(e)" : "colocataire";
-            return String.format("la demande de votre %s %s", requesterType, requester.getFirstName());
-        }
-
-    }
 
 }
